--- a/backend/migrations/alembic.ini
+++ b/backend/migrations/alembic.ini
@@ -7,8 +7,7 @@
 # set to 'true' to run the environment during
 # the 'revision' command, regardless of autogenerate
 # revision_environment = false
-script_location = migrations
-sqlalchemy.url = sqlite:///recipe_app.db
+sqlalchemy.url = postgresql://postgres.lwfpwzgjbdlfctlgfunl:Nfee84AsEJMajB!@aws-0-eu-west-2.pooler.supabase.com:6543/postgres
 
 # Logging configuration
 [loggers]
