--- a/backend/postgres.env
+++ b/backend/postgres.env
@@ -1,3 +1,5 @@
-POSTGRES_USER=Anthony
-POSTGRES_PASSWORD=Gachie
-POSTGRES_DB=recipe_sharing
+POSTGRES_USER= postgres.lwfpwzgjbdlfctlgfunl
+POSTGRES_PASSWORD= Nfee84AsEJMajB!
+POSTGRES_DB= postgres
+POSTGRES_HOST= aws-0-eu-west-2.pooler.supabase.com
+POSTGRES_PORT= 6543
