--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
 alembic==1.13.2
 aniso8601==9.0.1
+annotated-types==0.7.0
+anyio==4.4.0
 attrs==24.2.0
 bcrypt==4.2.0
 blinker==1.8.2
@@ -10,6 +12,7 @@ click==8.1.7
 colorama==0.4.6
 cryptography==3.4.8
 defusedxml==0.7.1
+deprecation==2.1.0
 exceptiongroup==1.2.2
 Faker==26.1.0
 flasgger==0.9.7.1
@@ -22,8 +25,15 @@ flask-restx==1.3.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==3.1.1
 Flask-Testing==0.8.1
+gotrue==2.6.2
 greenlet==3.0.3
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.5
 httpie==3.2.3
+httpx==0.27.0
+hyperframe==6.0.1
 idna==3.7
 importlib_metadata==8.2.0
 importlib_resources==6.4.0
@@ -41,7 +51,11 @@ multidict==6.0.5
 packaging==24.1
 pkgutil_resolve_name==1.3.10
 pluggy==1.5.0
+postgrest==0.16.10
+psycopg2-binary==2.9.9
 pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
 Pygments==2.18.0
 PyJWT==2.8.0
 PySocks==1.7.1
@@ -50,16 +64,23 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.2
+realtime==1.0.6
 referencing==0.35.1
 requests==2.31.0
 requests-toolbelt==1.0.0
 rich==13.7.1
 rpds-py==0.20.0
 six==1.16.0
+sniffio==1.3.1
 SQLAlchemy==2.0.31
 SQLAlchemy-serializer==1.4.12
+storage3==0.7.7
+StrEnum==0.4.15
+supabase==2.6.0
+supafunc==0.5.1
 tomli==2.0.1
 typing_extensions==4.12.2
 urllib3==2.2.2
+websockets==12.0
 Werkzeug==3.0.3
 zipp==3.19.2
