--- a/requirements.txt
+++ b/requirements.txt
@@ -1,86 +1,50 @@
-alembic==1.13.2
-aniso8601==9.0.1
 annotated-types==0.7.0
 anyio==4.4.0
-attrs==24.2.0
-bcrypt==4.2.0
-blinker==1.8.2
-certifi==2024.7.4
-cffi==1.16.0
+attrs==23.2.0
+backtrader==1.9.78.123
+beautifulsoup4==4.12.3
+certifi==2024.6.2
 charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-cryptography==3.4.8
-defusedxml==0.7.1
-deprecation==2.1.0
-exceptiongroup==1.2.2
-Faker==26.1.0
-flasgger==0.9.7.1
-Flask==3.0.3
-Flask-Bcrypt==1.0.1
-Flask-JWT-Extended==4.6.0
-Flask-Migrate==4.0.7
-Flask-RESTful==0.3.10
-flask-restx==1.3.0
-Flask-Script==2.0.6
-Flask-SQLAlchemy==3.1.1
-Flask-Testing==0.8.1
-gotrue==2.6.2
-greenlet==3.0.3
+contourpy==1.1.1
+cycler==0.12.1
+distro==1.9.0
+exceptiongroup==1.2.1
+fonttools==4.53.1
+gunicorn==23.0.0
 h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
 httpcore==1.0.5
-httpie==3.2.3
 httpx==0.27.0
-hyperframe==6.0.1
 idna==3.7
-importlib_metadata==8.2.0
 importlib_resources==6.4.0
 iniconfig==2.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.4
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-Mako==1.3.5
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-mistune==3.0.2
-multidict==6.0.5
+joblib==1.4.2
+kiwisolver==1.4.5
+matplotlib==3.7.5
+numpy==1.24.4
+oandapyV20==0.7.2
+openai==1.34.0
 packaging==24.1
-pkgutil_resolve_name==1.3.10
+pandas==2.0.3
+pillow==10.4.0
 pluggy==1.5.0
-postgrest==0.16.10
-psycopg2-binary==2.9.9
-pycparser==2.22
-pydantic==2.8.2
-pydantic_core==2.20.1
-Pygments==2.18.0
-PyJWT==2.8.0
-PySocks==1.7.1
-pytest==8.3.2
+py==1.11.0
+pydantic==2.7.4
+pydantic_core==2.18.4
+pyparsing==3.1.2
+pytest==7.1.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
-PyYAML==6.0.2
-realtime==1.0.6
-referencing==0.35.1
-requests==2.31.0
-requests-toolbelt==1.0.0
-rich==13.7.1
-rpds-py==0.20.0
+requests==2.32.3
+scikit-learn==1.3.2
+scipy==1.10.1
 six==1.16.0
 sniffio==1.3.1
-SQLAlchemy==2.0.31
-SQLAlchemy-serializer==1.4.12
-storage3==0.7.7
-StrEnum==0.4.15
-supabase==2.6.0
-supafunc==0.5.1
+soupsieve==2.5
+threadpoolctl==3.5.0
 tomli==2.0.1
+tqdm==4.66.4
 typing_extensions==4.12.2
-urllib3==2.2.2
-websockets==12.0
-Werkzeug==3.0.3
+tzdata==2024.1
+urllib3==2.2.1
 zipp==3.19.2
