--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,51 @@
+alembic==1.13.2
+aniso8601==9.0.1
 annotated-types==0.7.0
 anyio==4.4.0
 attrs==23.2.0
 backtrader==1.9.78.123
+bcrypt==4.2.0
 beautifulsoup4==4.12.3
-certifi==2024.6.2
+blinker==1.8.2
+certifi==2024.7.4
+cffi==1.17.0
 charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
 contourpy==1.1.1
+cryptography==43.0.0
 cycler==0.12.1
+defusedxml==0.7.1
 distro==1.9.0
 exceptiongroup==1.2.1
+Flask==3.0.3
+Flask-Bcrypt==1.0.1
+Flask-JWT-Extended==4.6.0
+Flask-Migrate==4.0.7
+Flask-RESTful==0.3.10
+Flask-Script==2.0.6
+Flask-SQLAlchemy==3.1.1
 fonttools==4.53.1
+greenlet==3.0.3
 gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.5
+httpie==3.2.3
 httpx==0.27.0
 idna==3.7
+importlib_metadata==8.2.0
 importlib_resources==6.4.0
 iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
 joblib==1.4.2
 kiwisolver==1.4.5
+Mako==1.3.5
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 matplotlib==3.7.5
+mdurl==0.1.2
+multidict==6.0.5
 numpy==1.24.4
 oandapyV20==0.7.2
 openai==1.34.0
@@ -28,23 +54,32 @@ pandas==2.0.3
 pillow==10.4.0
 pluggy==1.5.0
 py==1.11.0
+pycparser==2.22
 pydantic==2.7.4
 pydantic_core==2.18.4
+Pygments==2.18.0
+PyJWT==2.8.0
 pyparsing==3.1.2
+PySocks==1.7.1
 pytest==7.1.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
-requests==2.32.3
+requests==2.31.0
+requests-toolbelt==1.0.0
+rich==13.7.1
 scikit-learn==1.3.2
 scipy==1.10.1
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
+SQLAlchemy==2.0.31
+SQLAlchemy-serializer==1.4.12
 threadpoolctl==3.5.0
 tomli==2.0.1
 tqdm==4.66.4
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.1
+Werkzeug==3.0.3
 zipp==3.19.2
